2004-06-10  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c: Parse preserveAspectRatio
	* rsvg-shapes.c: Honor preserveAspectRatio to some extent, 
	honor base URIs
	* rsvg-filter.c: Honor base URIs
	* moz-plugin/moz-plugin.c: Grab the SVG's URI
	* rsvg.[ch]: Place to hang the SVG's base URI
	* test-display.c: Accept the SVG's base URI as a param
	
2004-06-10  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: fixed overlay filter
	* rsvg-styles.c: reenabled a:adobe-blending-mode

2004-06-09  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c (rsvg_viewport_percentage): Fix
	http://www.w3.org/Graphics/SVG/Test/20030813/htmlframe/full-coords-units-02-b.html
	* rsvg-styles.c: Disabled a:adobe-blending-mode, as it caused bug 144049. Bug 144049 still open.
	
2004-06-10  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-paint-server.c: fixed all known pattern geometry problems

2004-06-09  Dodji Seketeli  <dodji@gnome.org>

	* configure.in: several versions of libcroco can now be
	installed in parallel. We compile and link against the 0.6.xx serie.

2004-06-08  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c, rsvg-styles.c: made stop colours inheritable
	* rsvg-filter.c: made gaussian blurring better looking by weighting by alpha
	* rsvg-pattern.c: made patterns able to link to others

2004-06-08  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg.c, rsvg-paint-server.c: added pattern support
	* rsvg-shapes.c: return the value of the new group created when pushing defs groups
	* rsvg-css.c: fixed problem caused when there are multiple seperating charactors between two elements in a list
	* rsvg-filter.c: fixed the constant term in colour matricies.
	
2004-06-06  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Back out elementNs functions. They're not needed after all.
	* test-display.c: Save the input SVG to a file. Better printing code - scales nicely, preserves aspect-ratio
	
2004-06-07  Caleb Moore <c.moore@student.unsw.edu.au>
	