@@ -125,6 +125,13 @@ struct _RsvgState {
 	guint32 current_color;
 	gboolean has_current_color;
 
+	RsvgDefVal * startMarker;
+	RsvgDefVal * middleMarker;
+	RsvgDefVal * endMarker;	
+	gboolean has_startMarker;
+	gboolean has_middleMarker;
+	gboolean has_endMarker;	
+
 	GdkPixbuf *save_pixbuf;
 };
 
